--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+# Theme Settings
+remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
+
 # Site Settings
 locale                   : "en-US"
 title                    : "Eren Kotar"
@@ -241,6 +244,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jekyll-include-cache
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
