--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,6 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
-# Theme Settings
-remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
-
 # Site Settings
 locale                   : "en-US"
 title                    : "Eren Kotar"
@@ -85,12 +82,13 @@ analytics:
 author:
   name             : "Eren Kotar"
   avatar           : "profile.png"
-  bio              : "MSc Student in Computer Engineering at Bogazici University"
+  bio              : "MSc Computer Engineering Student at Boğaziçi University"
   location         : "Istanbul, Turkey"
-  researchgate     : "https://www.researchgate.net/profile/Eren_Kotar"
+  googlescholar    : 
   email            : "erenkotar@hotmail.com"
-  github           : "erenkotar"
-  linkedin         : "erenkotar"
+  researchgate     : "https://tr.ee/rm5KN1r6vF"
+  github           : "https://tr.ee/SCVo6kQ2m1"
+  linkedin         : "https://www.linkedin.com/in/erenkotar/"
   spotify          : "https://open.spotify.com/user/erenkotar?si=bdb2c6226c234850"
   cv               : "/assets/ErenKotar_CV.pdf"
 
@@ -244,7 +242,6 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
-  - jekyll-include-cache
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
