Fix GitHub link, hide Spotify, and add bachelor thesis publication

--- a/_config.yml
+++ b/_config.yml
@@ -87,9 +87,9 @@ author:
   googlescholar    : 
   email            : "erenkotar@hotmail.com"
   researchgate     : "https://tr.ee/rm5KN1r6vF"
-  github           : "https://tr.ee/SCVo6kQ2m1"
+  github           : "https://github.com/erenkotar"
   linkedin         : "https://www.linkedin.com/in/erenkotar/"
-  spotify          : "https://open.spotify.com/user/erenkotar?si=bdb2c6226c234850"
+  # spotify          : "https://open.spotify.com/user/erenkotar?si=bdb2c6226c234850"
   cv               : "/assets/ErenKotar_CV.pdf"
 
 
